--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "twig/twig": "^3.4",
         "symfony/dotenv": "^6.1",
         "guzzlehttp/guzzle": "^7.5",
-        "league/tactician": "^1.1"
+        "league/tactician": "^1.1",
+        "ramsey/uuid": "^4.6"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.0"
