--- a/bootstrap/services.yml
+++ b/bootstrap/services.yml
@@ -1,11 +1,13 @@
 parameters:
     commands: # used to lazy-load commands (CommandLoader)
-        create: Cinch\Console\CreateCommand
+        'create': Cinch\Console\CreateCommand
+        'migration': Cinch\Console\MigrationCommand
         'migration:add': Cinch\Console\MigrationAddCommand
+        'migration:remove': Cinch\Console\MigrationRemoveCommand
         'env': Cinch\Console\EnvCommand
         'env:add': Cinch\Console\EnvAddCommand
         'env:remove': Cinch\Console\EnvRemoveCommand
-        migrate: Cinch\Console\MigrateCommand
+        'migrate': Cinch\Console\MigrateCommand
         'migrate:count': Cinch\Console\MigrateCountCommand
         'migrate:script': Cinch\Console\MigrateScriptCommand
 
