--- a/config/services.yml
+++ b/config/services.yml
@@ -6,36 +6,28 @@ services:
     _instanceof:
         Cinch\Command\CommandHandler:
             public: true
-
+        Cinch\Console\Query\QueryHandler:
+            public: true
         Symfony\Component\EventDispatcher\EventSubscriberInterface:
             tags: [ 'subscriber' ]
 
-    Cinch\Command\:
+    Cinch\:
         lazy: true
-        resource: '../src/Command'
-
-    Cinch\MigrationStore\Script\:
-        lazy: true
-        resource: '../src/MigrationStore/Script'
-
-    Psr\Log\LoggerInterface: '@logger'
+        resource: '../src/'
+        exclude:
+            - '../src/helpers.php'
+            - '../src/Common/'
+            - '../src/Component/'
+            - '../src/Console/Command/'
+            - '../src/Project/'
 
     Cinch\Database\SessionFactory: ~
-
-    Cinch\Console\ConsoleProjectRepository: ~
     Cinch\Project\ProjectRepository:
-        public: true
         class: Cinch\Console\ConsoleProjectRepository
 
     Cinch\History\HistoryFactory:
         arguments:
             $application: 'cinch-cli/%cinch.version%'
-
-    Cinch\History\SchemaVersion:
-        arguments:
-            - '%schema.version%'
-            - '%schema.description%'
-            - '%schema.release_date%'
 
     Cinch\MigrationStore\MigrationStoreFactory:
         arguments:
@@ -43,13 +35,18 @@ services:
             $resourceDir: '%cinch.resource_dir%'
             $userAgent: 'cinch-cli/%cinch.version%'
 
+    Cinch\History\SchemaVersion:
+        arguments:
+            - '%schema.version%'
+            - '%schema.description%'
+            - '%schema.release_date%'
+
     Twig\Loader\LoaderInterface:
         class: Twig\Loader\FilesystemLoader
         arguments:
             - '%twig.template_dir%'
 
     Twig\Environment:
-        public: true
         arguments:
             $options:
                 autoescape: false
@@ -73,57 +70,3 @@ services:
         public: true
         arguments:
             - [ '@League\Tactician\Handler\CommandHandlerMiddleware' ]
-
-
-
-    #    Cinch\:
-    #        lazy: true
-    #        resource: '../src'
-    #        exclude:
-    #            - '../src/helpers.php'
-    #            - '../src/Common/'
-    #            - '../src/Component/'
-    #            - '../src/Console/'
-    #            - '../src/Project/'
-
-    #    Cinch\Console\Application:
-    #        public: true
-    #        arguments:
-    #            $version: '%cinch.version%'
-
-    # log.file points to a temp file during create. inject path so it can be moved to projectDir after create
-    #    Cinch\Console\Commands\Create:
-    #        arguments:
-    #            $tempLogFile: '%log.file%'
-
-    #    log.time_zone:
-    #        class: DateTimeZone
-    #        arguments:
-    #            - '%log.time_zone%'
-
-    #   log.formatter:
-    #       class: Monolog\Formatter\LineFormatter
-    #       arguments:
-    #           $dateFormat: 'Y-m-d\TH:i:sO'
-    #           $ignoreEmptyContextAndExtra: true
-
-    #    log.stream_handler:
-    #        public: true
-    #        class: Monolog\Handler\StreamHandler
-    #        arguments:
-    #            $stream: '%log.file%'
-    #        calls:
-    #            -   setFormatter: [ '@log.formatter' ]
-
-    #    log.noop_handler:
-    #        public: true
-    #        class: Monolog\Handler\NoopHandler
-
-    #    logger:
-    #        public: true
-    #        class: Monolog\Logger
-    #        arguments:
-    #            $name: '%project.name%'
-    #            $handlers:
-    #                - "@=parameter('log.enabled') ? service('log.stream_handler') : service('log.noop_handler')"
-    #            $timezone: '@log.time_zone'
