--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/dotenv": "^6.2",
         "guzzlehttp/guzzle": "^7.5",
         "league/tactician": "^1.1",
-        "symfony/uid": "^6.2"
+        "symfony/uid": "^6.2",
+        "psr/log": "^3.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.0"
