refactored commands, created add migration task, add labels to store.add

--- a/config/services.yml
+++ b/config/services.yml
@@ -4,7 +4,7 @@ services:
         public: false
 
     _instanceof:
-        Cinch\Command\CommandHandler:
+        Cinch\Command\Handler:
             public: true
             calls:
                 -   setIo: [ '@Cinch\Io' ]
