--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      - run: git config --global user.email "achernow@gmail.com"
+      - run: git config --global user.name "Andrew Chernow"
+      
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
 
@@ -24,6 +26,8 @@ jobs:
       - name: Run PHP-CS-Fixer Style
         run: ./vendor/bin/php-cs-fixer fix --config=./php_cs.php --allow-risky=no && rm -f ./.php-cs-fixer.cache
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply PHP-CS-Fixer changes
+      - run: git commit --message 'Apply PHP-CS-Fixer changes'
+      - run: git push
+#      - uses: stefanzweifel/git-auto-commit-action@v4
+#        with:
+#          commit_message: Apply PHP-CS-Fixer changes
