--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -29,12 +29,11 @@ jobs:
       - name: Push Changes
         run: |
           date > generated.txt
+          git config user.name andrewchernow
+          git config user.email achernow@gmail.com          
           git add .
           git commit -m "Apply PHP-CS-Fixer changes"
           git push
-
-#          git config user.name andrewchernow
-#          git config user.email achernow@gmail.com
 
 #      - uses: stefanzweifel/git-auto-commit-action@v4
 #        with:
