--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,34 +1,26 @@
 name: PHP CS Fixer
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-# permissions:
-#  contents: read
+    pull_request:
+        branches: [ "master" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - run: git config --global user.email "achernow@gmail.com"
-      - run: git config --global user.name "Andrew Chernow"
-      - uses: actions/checkout@v3
-      
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3
 
-      - name: Install composer packages
-        run: composer install -qn
+            -   name: Validate composer.json and composer.lock
+                run: composer validate --strict
 
-      - name: Run PHP-CS-Fixer Style
-        run: ./vendor/bin/php-cs-fixer fix --config=./php_cs.php --allow-risky=no && rm -f ./.php-cs-fixer.cache
+            -   name: Install composer packages
+                run: composer install -qn
 
-      - run: git add .
-      - run: git commit --message 'Apply PHP-CS-Fixer changes'
-      - run: git push
-#      - uses: stefanzweifel/git-auto-commit-action@v4
-#        with:
-#          commit_message: Apply PHP-CS-Fixer changes
+            -   name: Run PHP-CS-Fixer
+                run: |
+                    ./vendor/bin/php-cs-fixer fix --config=./php_cs.php --allow-risky=no
+                    rm -f ./.php-cs-fixer.cache
+
+            -   uses: stefanzweifel/git-auto-commit-action@v4
+                with:
+                    commit_message: Apply PHP-CS-Fixer changes
