--- a/resources/store.yml
+++ b/resources/store.yml
@@ -1,15 +1,12 @@
 #
 # This file is an object with several properties: variables, follow_links and directories. Variables at the top-level
-# scope are available within any script: replacing {{ name }} within SQL scripts and available as an associative
+# scope are available within any script: replacing ${name} within SQL scripts and available as an associative
 # array to PHP scripts. The directories property is an array of directory objects. The array defines the
 # deployment order of directories. Within each directory, a 'sort' policy defines the order of migration scripts.
 #
 # When a store directory is configured recursively, the order is still defined by the sort policy,
 # with the addition that processing is depth first: a/a/a.sql is processed before a/a.sql. Subdirectories
 # are sorted separately from files and are always processed first: ex. z1/, z2/, a1.sql, a2.sql
-#
-# For ENV/variable replacements within SQL scripts, cinch uses the Twig template engine. Thus: conditionals,
-# loops, filters, etc. can also be used. Please see https://twig.symfony.com/.
 #
 # An example store.yml with default values: excluding 'path' which is required.
 # -----------------------------------------------------------------------------------------------------------
@@ -21,7 +18,7 @@
 #     sort: natural           # sort policy: natural and alpha with -ci (case-insensitive) variants
 #     recursive: false        # search recursively within directory, applying rules declared here
 #     error_if_empty: false   # raise an error if directory is empty (after applying any filtering)
-#     environment: false      # enable ENV variables within SQL scripts: {{ MY_ENV_VAR }}. ENV variables
+#     environment: false      # enable ENV variables within SQL scripts: ${MY_ENV_VAR}. ENV variables
 #                             # take precedence over 'variables' when there is a conflict.
 #     exclude: []             # path patterns to exclude: PHP regular expressions - must use '/' delimiters
 #     variables: {}           # available to this directory only, merged into top-level variables
