--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "doctrine/dbal": "^3.5",
         "ext-pdo": "*",
         "ext-mbstring": "*",
-        "twig/twig": "^3.4",
         "symfony/dotenv": "^6.2",
         "guzzlehttp/guzzle": "^7.5",
         "league/tactician": "^1.1",
@@ -30,8 +29,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
-        "symfony/var-dumper": "^6.0",
-        "code-lts/doctum": "^5.5"
+        "symfony/var-dumper": "^6.0"
     },
     "autoload": {
         "psr-4": {
